overflow fixed

--- a/css/stylem.css
+++ b/css/stylem.css
@@ -16,10 +16,9 @@ body {
   --p_Color: #777;
   --p_LineHeight: 1.6;
   --backgroundColor: #f6f6f6;
-  --secBackgroundColor : white;
-  --transitionDur : 0.5s;
-  --h3Color: #333
-
+  --secBackgroundColor: white;
+  --transitionDur: 0.5s;
+  --h3Color: #333;
 }
 HTML {
   scroll-behavior: smooth;
@@ -34,7 +33,7 @@ HTML {
 /* Extra small devices (phones, 600px and down) */
 @media (max-width: 600px) {
   .container {
-    width: 100%;
+    
   }
   .features .container .feat:last-child {
     padding-bottom: 20px;
@@ -50,7 +49,7 @@ HTML {
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media (min-width: 600px) {
   .container {
-    width: 100%;
+    
   }
 }
 /* Medium devices (landscape tablets, 768px and up) */
@@ -95,7 +94,7 @@ HTML {
 /* header start */
 .header {
   padding: 10px;
-  background-color: var(--secBackgroundColor) ;
+  background-color: var(--secBackgroundColor);
 }
 .header .container {
   display: flex;
@@ -103,7 +102,6 @@ HTML {
   margin-right: auto;
   justify-content: space-between;
   align-items: center;
-  
 }
 .logo img {
   width: 60px;
@@ -211,19 +209,18 @@ HTML {
 /* Start Features Section */
 .features {
   margin: 0;
-  background-color: var(--backgroundColor);
+  /* background-color: var(--backgroundColor); */
 }
 .features .container {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
-  margin: 1px;
+  margin: 0;
   padding: 20px;
 }
 .features .container .feat {
   text-align: center;
-
 }
 
 .features .container .feat .icon {
@@ -246,10 +243,9 @@ HTML {
   margin: 0 auto;
   padding-bottom: var(--sectionPadding);
   padding-top: var(--sectionPadding);
-  background-color: var(--secBackgroundColor) ;
+  /* background-color: var(--secBackgroundColor); */
 }
 .services_section .container {
-  
   margin: 0 auto;
   padding: var(--sectionPadding) 0; /* DO I really need this :) . */
 }
@@ -322,7 +318,6 @@ HTML {
   margin: 0 auto;
   padding-bottom: var(--sectionPadding);
   padding-top: var(--sectionPadding);
-  
 }
 .potfolio_content {
   margin: 0 auto;
@@ -346,7 +341,7 @@ HTML {
 .potfolio_content .container .card .card_info {
   margin: 0;
   padding: 20px;
-  background-color: var(--secBackgroundColor) ;
+  background-color: var(--secBackgroundColor);
 }
 .potfolio_content .container .card .card_info h3 {
   margin: 0;
@@ -367,7 +362,8 @@ HTML {
   /* padding: 0; */
   padding-top: var(--sectionPadding);
   padding-bottom: var(--sectionPadding);
-  background-color: var(--secBackgroundColor) ;
+  /* background-color: var(--secBackgroundColor); 
+  WHy background color get priority over pseudo class? owh it makes sense bcs it is a pseudo*/
 }
 .about_section .container {
   margin: 0 auto;
@@ -460,7 +456,7 @@ HTML {
 .contact_content {
   margin: 0 auto;
   padding: var(--sectionPadding);
-  margin-bottom: var(--sectionPadding) ;
+  margin-bottom: var(--sectionPadding);
 }
 .contact_content .container {
   padding: 20px;
@@ -473,7 +469,7 @@ HTML {
   color: white;
   letter-spacing: -2px;
   padding: 10px 20px;
-  border-radius: 24%
+  border-radius: 24%;
 }
 .contact_content .container .link {
   font-size: 35px;
@@ -483,18 +479,18 @@ HTML {
   padding: var(--sectionPadding) var(--sectionPadding);
 }
 .contact_content .container .social {
-      font-size: 19px;
-      color: var(--p_Color);
-      padding: var(--sectionPadding);
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: flex-end;
+  font-size: 19px;
+  color: var(--p_Color);
+  padding: var(--sectionPadding);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
 .contact_content .container .social i {
-  margin-right: 3px ;
-  margin-left: 3px ;
+  margin-right: 3px;
+  margin-left: 3px;
 }
-.contact_content .container .social i:hover  {
+.contact_content .container .social i:hover {
   color: var(--mainColor);
 }
 @media (max-width: 700px) {
@@ -506,7 +502,7 @@ HTML {
   }
   .contact_content .container .social {
     font-size: 110%;
-}
+  }
 }
 /* End Contact Section */
 /* Star Footer */
@@ -522,7 +518,6 @@ HTML {
 }
 .footer .container p {
   color: white;
-  
 }
 .footer .container p:nth-child(2) span {
   font-weight: bold;
